--- a/lagou-web-content.css
+++ b/lagou-web-content.css
@@ -22,7 +22,7 @@
   background: #fafafa;
   list-style: none;
   width: 999px;
-  height: 233px;
+  height: 253px;
   border: 1px solid #ebebeb;
 }
 .has-more {
@@ -41,6 +41,14 @@
   text-decoration: none;
   background-color: #fff;
   color: #555;
+  border: 1px solid #ebebeb;
+}
+.has-more .current_city:hover {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  padding: 3px 8px;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
   border: 1px solid #ebebeb;
 }
 .has-more .hot-city-name {
@@ -117,6 +125,8 @@
   border: 1px solid #ebebeb;
 }
 .has-more-area .btn-more {
+  display: inline-block;
+  width: 49px;
   font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
   color: #555555;
   padding: 10px 10px;
@@ -523,11 +533,11 @@
   text-decoration: none;
   background-color: #00b38a;
   color: #fff;
-  padding: 10px 8px;
+  padding: 3px 8px;
 }
 .multi-chosen .option:hover {
   font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
-  padding: 10px 8px;
+  padding: 3px 8px;
   text-decoration: none;
   background-color: #00b38a;
   color: #fff;
@@ -538,7 +548,7 @@
   border-top: 6px solid transparent;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  top: 12px;
+  top: 11px;
   left: 44px;
 }
 .has-more-open {
@@ -548,10 +558,11 @@
   display: block;
   position: absolute;
   top: 0;
-  right: -76px;
-  width: 997px;
+  right: -77px;
+  width: 999px;
   height: 100px;
   background: #fff;
+  border: 1px solid #ededed;
 }
 .has-more-open {
   font-size: 14px;
@@ -571,6 +582,14 @@
   color: #555;
   border: 1px solid #ebebeb;
 }
+.has-more-open .current_city:hover {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  padding: 3px 8px;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
+  border: 1px solid #ebebeb;
+}
 .has-more-open .hot-city-name {
   font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
   color: #555555;
@@ -584,7 +603,7 @@
   text-decoration: none;
   position: absolute;
   left: 875px;
-  top: 0;
+  top: -1px;
   cursor: pointer;
 }
 .has-more-open .btn-more .triangle {
@@ -595,4 +614,137 @@
   border-right: 6px solid transparent;
   top: 18px;
   left: 44px;
+}
+.has-more-open .more_city {
+  border-top: 1px dashed #ededed;
+  margin: 17px 0 0 0;
+  padding: 18px 0 0 0;
+}
+.has-more-open .more_city .city_name {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  color: #555555;
+  padding: 10px 8px;
+  text-decoration: none;
+  line-height: 23px;
+}
+.has-more-open .more_city .city_name:hover {
+  padding: 2px 8px;
+  text-decoration: none;
+  line-height: 23px;
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
+}
+.has-more-area .area:hover {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  padding: 3px 8px;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
+}
+.has-more-area .btn-more .has-more-open {
+  display: none;
+}
+.has-more-area .btn-more .has-more-open {
+  display: none;
+}
+.has-more-area .btn-more .has-more .btn-more:hover .has-more-open {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: -76px;
+  width: 997px;
+  height: 100px;
+  background: #fff;
+}
+.has-more-area .btn-more .has-more-open {
+  font-size: 14px;
+  padding: 10px 0;
+}
+.has-more-area .btn-more .has-more-open .title {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  font-weight: 700;
+  color: #555555;
+  padding: 10px 10px;
+}
+.has-more-area .btn-more .has-more-open .current_city {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  padding: 3px 8px;
+  text-decoration: none;
+  background-color: #fff;
+  color: #555;
+  border: 1px solid #ebebeb;
+}
+.has-more-area .btn-more .has-more-open .current_city:hover {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  padding: 3px 8px;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
+  border: 1px solid #ebebeb;
+}
+.has-more-area .btn-more .has-more-open .hot-city-name {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  color: #555555;
+  padding: 10px 8px;
+  text-decoration: none;
+}
+.has-more-area .btn-more .has-more-open .btn-more {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  color: #555555;
+  padding: 10px 10px;
+  text-decoration: none;
+  position: absolute;
+  left: 874px;
+  top: -1px;
+  cursor: pointer;
+}
+.has-more-area .btn-more .has-more-open .btn-more .triangle {
+  position: absolute;
+  border-bottom: 6px solid #00b38a;
+  border-top: 6px solid transparent;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  top: 11px;
+  left: 44px;
+}
+.has-more-area .btn-more .has-more-open .more_city {
+  border-top: 1px dashed #ededed;
+  margin: 17px 0 0 0;
+  padding: 18px 0 0 0;
+}
+.has-more-area .btn-more .has-more-open .more_city .city_name {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  color: #555555;
+  padding: 10px 8px;
+  text-decoration: none;
+  line-height: 23px;
+}
+.has-more-area .btn-more .has-more-open .more_city .city_name:hover {
+  padding: 2px 8px;
+  text-decoration: none;
+  line-height: 23px;
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
+}
+.has-more-area .btn-more:hover .has-more-open {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: -58px;
+  width: 1000px;
+  height: 100px;
+  background: #fff;
+  z-index: 1;
+  border: 1px solid #ededed;
+}
+.has-more-area .btn-more .has-more-open .hot-city-name:hover {
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+  padding: 3px 8px;
+  text-decoration: none;
+  background-color: #00b38a;
+  color: #fff;
 }
