--- a/lagou-web-content.css
+++ b/lagou-web-content.css
@@ -344,6 +344,17 @@
   bottom: 77px;
   left: 911px;
 }
+.con_list_item_02 .com_logo {
+  display: block;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #f5f5f5;
+  background: url(https://www.lgstatic.com/thumbnail_120x120/i/image2/M01/B1/74/CgoB5lv-bpWAM1hoAAAVcDTCKL0198.png);
+  background-size: 60px 60px;
+  position: relative;
+  bottom: 77px;
+  left: 911px;
+}
 .list_item_bot {
   width: 970px;
   height: 40px;
@@ -750,4 +761,30 @@
 }
 .history .p_list_item .name:hover {
   color: #00b38a;
+}
+.item_con_pager .num:hover {
+  cursor: pointer;
+  color: #fff;
+  background: #00b38a;
+  display: inline-block;
+  border: 1px solid #ededed;
+  height: 21px;
+  line-height: 21px;
+  padding: 3px 10px;
+  margin: 0 5px;
+  font-size: 14px;
+  text-decoration: none;
+}
+.page_down:hover {
+  cursor: pointer;
+  color: #fff;
+  background: #00b38a;
+  display: inline-block;
+  border: 1px solid #ededed;
+  height: 21px;
+  line-height: 21px;
+  padding: 3px 10px;
+  margin: 0 5px;
+  font-size: 14px;
+  text-decoration: none;
 }
